Fix profile pic on tablet

--- a/main.scss
+++ b/main.scss
@@ -208,6 +208,10 @@ img {
     .container {
         max-width: 720px;
     }
+
+    .card__img {
+        height: 350px;
+    }
 }
 
 @media (min-width: $breakpoint-lg) {
@@ -273,6 +277,12 @@ img {
     height: 400px;
     width: 400px;
     border-radius: 50%;
+}
+
+.mobile-profile-pic {
+    background-image: url('./assets/images/profile-pic-cropped.jpg');
+    background-position: 0% 40%;
+    background-size: cover;
 }
 
 .mb-0 {
